--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
     "serverless"
   ],
   "dependencies": {
-    "async": "^2.1.2",
     "bluebird": "^3.4.6",
-    "chalk": "^1.1.3",
-    "lodash": "^4.16.6",
-    "fs-extra": "^2.0.0",
     "jszip": "^3.1.3",
-    "request": "2.79.0",
-    "ms-rest-azure": "^1.15.4",
-    "azure-arm-resource": "1.6.1-preview"
+    "request": "2.79.0"
   },
   "engines": {
     "node": ">= 6.5.0"
