--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "jszip": "^3.1.3",
-    "request": "2.79.0"
+    "request": "2.79.0",
+    "yamljs": "^0.2.8"
   },
   "engines": {
     "node": ">= 6.5.0"
